--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <title>Перша сторінка</title>
     <style>
         h1 {
-            text-align: centergit ;
+            text-align: center ;
         }
     </style>
 </head>
 
 <body>
+
+<h1>Знайомство з GIT</h1>
 
 </body>
 </html>
