--- a/gallery.html
+++ b/gallery.html
@@ -5,9 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Друга сторінка</title>
+
+    <style>
+        h1 {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
+
+<h1>Галерея</h1>
+<a href="index.html">Перша сторінка</a>
 
 </body>
 </html>
