--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 <body>
 
 <h1>Знайомство з GIT</h1>
+
+<p>Команди GIT, які вивчили на уроці:<br>
+    1. git status - показує стан файлів у робочому каталозі <br>
+    2.git add - додає вміст робочого каталогу <br>
+    3. git init - створює новий репозиторій<br>
+</p>
+
 <a href="gallery.html">Галерея</a>
 
 </body>
