Додавання фото у Галерею

--- a/gallery.html
+++ b/gallery.html
@@ -16,6 +16,13 @@
 <body>
 
 <h1>Галерея</h1>
+
+<img src="images/photo_1.jpg" alt="GitBanner">
+<img src="images/photo_2.jpg" alt="GitForProfessionals">
+<img src="images/photo_3.webp" alt="GitCommands">
+
+
+
 <a href="index.html">Перша сторінка</a>
 
 </body>
