Остаточний вигляд Галереї

--- a/gallery.html
+++ b/gallery.html
@@ -11,18 +11,23 @@
         h1 {
             text-align: center;
         }
+
+
     </style>
 </head>
 <body>
 
 <h1>Галерея</h1>
 
-<img src="images/photo_1.jpg" alt="GitBanner">
-<img src="images/photo_2.jpg" alt="GitForProfessionals">
-<img src="images/photo_3.webp" alt="GitCommands">
+<img src="images/photo_1.jpg" width="500" height="300" alt="GitBanner">
+<p></p>
+<img src="images/photo_2.jpg" width="500" height="300" alt="GitForProfessionals">
+<p></p>
+<img src="images/photo_3.webp" width="500" height="300" alt="GitCommands">
 
+<p></p>
 
-
+<h2>Ссилка на першу сторінку:</h2>
 <a href="index.html">Перша сторінка</a>
 
 </body>
